User - changed avatar_url field to avatar. Implemented file upload handling in signup, profile update
