# api/models.py
@@ -1,4 +1,7 @@
+import os
+
 import bcrypt
+from flask import current_app
 from flask_sqlalchemy import SQLAlchemy
 
 db = SQLAlchemy()
@@ -8,7 +11,7 @@ class User(db.Model):
     id = db.Column(db.Integer, unique=True, primary_key=True)
     username = db.Column(db.String(50), nullable=False, unique=True)
     password = db.Column(db.String(255), nullable=False)
-    avatar_url = db.Column(db.String(255), nullable=True)
+    avatar = db.Column(db.String(255), nullable=True)
 
     def set_password(self, raw_password: str):
         salt = bcrypt.gensalt()
@@ -16,6 +19,12 @@ class User(db.Model):
 
     def check_password(self, password: str):
         return bcrypt.checkpw(password.encode(), self.password.encode())
+
+    @property
+    def avatar_filepath(self):
+        if not self.avatar:
+            return None
+        return os.path.join(current_app.config["MEDIA_DIR"], self.avatar)
 
 
 class ProductList(db.Model):
@@ -30,7 +39,7 @@ class Product(db.Model):
     id = db.Column(db.Integer, unique=True, primary_key=True)
     sku = db.Column(db.String(50), nullable=False)
     name = db.Column(db.String(100), nullable=False)
-    image_url = db.Column(db.String(255), nullable=True)
+    image = db.Column(db.String(255), nullable=True)
 
     product_list_id = db.Column(
         db.Integer, db.ForeignKey("product_list.id"), nullable=False
@@ -40,6 +49,12 @@ class Product(db.Model):
     )
 
     __table_args__ = (db.UniqueConstraint("sku", "product_list_id"),)
+
+    @property
+    def image_filepath(self):
+        if not self.image:
+            return None
+        return os.path.join(current_app.config["MEDIA_DIR"], self.image)
 
 
 class ProductPrice(db.Model):
