# api/swagger.yaml
@@ -40,7 +40,7 @@ paths:
       summary: Register new user
       requestBody:
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               required:
@@ -51,8 +51,9 @@ paths:
                   type: string
                 password:
                   type: string
-                avatar_url:
+                avatar:
                   type: string
+                  format: binary
       responses:
         200:
           description: User has been registered successfully
@@ -65,7 +66,7 @@ paths:
                     type: integer
                   username:
                     type: string
-                  avatar_url:
+                  avatar:
                     type: string
 
   /auth/profile:
@@ -74,14 +75,15 @@ paths:
       summary: Update profile information
       requestBody:
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
                 username:
                   type: string
-                avatar_url:
+                avatar:
                   type: string
+                  format: binary
       responses:
         200:
           description: Profile info has been updated successfully
@@ -92,7 +94,7 @@ paths:
                 properties:
                   username:
                     type: string
-                  avatar_url:
+                  avatar:
                     type: string
 
   /product_lists:
